--- a/style/_main.scss
+++ b/style/_main.scss
@@ -1,4 +1,4 @@
-.main {    
+.main {      
     .section-1 {
         background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
         clip-path: polygon(0 5%, 100% 0, 100% 95%, 0 100%);     
@@ -19,8 +19,8 @@
 
         iframe {                    
             overflow: hidden;
-            height: 225px;
-            width: 298px;
+            height: 14.0625rem;
+            width: 18.625rem;
 
         }
     }
