--- a/style/style.scss
+++ b/style/style.scss
@@ -1,7 +1,10 @@
 @import '_baserules';
 @import 'variables';
 @import 'header';
+@import 'mediaquery_header';
 @import 'title';
+@import 'mediaquery_title';
 @import 'main';
+@import 'mediaquery_main';
 @import 'footer';
-@import 'mediaquery';
+@import 'mediaquery_footer';
