--- a/style/_header.scss
+++ b/style/_header.scss
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
-    height: 65px;
+    height: 3.75rem;
     background: $text-color-2;
     position: sticky;
     top: 0;
