--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -1,7 +1,7 @@
 .footer {    
     width: 100%;
     height: 5.625rem;
-    padding: 2rem 2rem;
+    padding: 2rem 0;
     
     h3 {        
         text-align: center;  
