--- a/style/style.css
+++ b/style/style.css
@@ -532,9 +532,6 @@
 }
 
 @media screen and (min-width: 769px) {
-  html {
-    font-size: 18px;
-  }
   .main .section-1 {
     -webkit-clip-path: polygon(0 13%, 100% 0, 100% 87%, 0 100%);
             clip-path: polygon(0 13%, 100% 0, 100% 87%, 0 100%);
@@ -709,7 +706,7 @@
 .footer {
   width: 100%;
   height: 5.625rem;
-  padding: 2rem 2rem;
+  padding: 2rem 0;
 }
 
 .footer h3 {
