--- a/style/_baserules.scss
+++ b/style/_baserules.scss
@@ -1,4 +1,6 @@
 * {
+    @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&family=IBM+Plex+Sans:wght@300&family=Roboto&display=swap');
     margin: 0;
     padding: 0;
     border: 0;
