--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -5,7 +5,7 @@
     
     h3 {        
         text-align: center;  
-        font-family: 'IBM Plex Mono', monospace;
+        font-family: $font-mono;
         font-size: 0.9375rem;
         margin-bottom: 0.8rem;
     }
