--- a/style/_main.scss
+++ b/style/_main.scss
@@ -10,7 +10,7 @@
 
         .h3-section-1 {
             font-size: 2.5rem;
-            font-family: 'IBM Plex Sans', sans-serif;
+            font-family: $font-sans;
             color: $text-color-2;
             line-height: 0.5rem;
             text-align: start;
@@ -32,21 +32,21 @@
 
         img {
             height: auto;
-            width: 320px;
+            width: 20rem;
             transform: translate(0, -5.625rem);
             
         }
         .text {
             padding: 0 1rem;
             .h3-section-2 {
-                font-family: 'IBM Plex Sans', sans-serif;
+                font-family: $font-sans;
                 font-size: 2.5rem;
                 margin-bottom: 1rem;
             }
             
             p {
                 line-height: 1.5rem;
-                font-family: 'IBM Plex Mono', monospace;
+                font-family: $font-mono;
                 margin-bottom: 1rem;
             }
         }
@@ -54,7 +54,7 @@
 
     .section-3 {        
         h3 {
-            font-family: 'IBM Plex Sans', sans-serif;            
+            font-family: $font-sans;            
             margin: 2.5rem 1rem 1rem 1rem;
             font-size: 2rem;
         }
@@ -73,10 +73,9 @@
 
     .section-4 {
         h3 {
-            font-family: 'IBM Plex Sans', sans-serif;
-            //margin-left: 6.25rem;
+            font-family: $font-sans;            
             margin: 3rem 1rem;
-            font-size: 1.75rem;            
+            font-size: 2rem;
         }
 
         .images-section-4 {
@@ -96,7 +95,7 @@
                 }
                 p {
                     width: 10.625rem;
-                    font-family: 'IBM Plex Sans', sans-serif;
+                    font-family: $font-sans;
                     font-weight: bold;
                     font-size: 1rem;
                     text-align: center;
@@ -119,7 +118,7 @@
         h3 {
             text-align: center;
             font-size: 2rem;
-            font-family: 'IBM Plex Sans', sans-serif;
+            font-family: $font-sans;
             color: $text-color-2;
         }
     
@@ -130,13 +129,20 @@
             background: $btn-color-normal;
             display: flex;
             justify-content: center;
-            align-items: center;            
-                    
+            align-items: center;          
+            &:hover {
+                background: $btn-color-hover;
+                line-height: 1.5rem;
+                a {
+                    color: $text-color-2;                    
+                }
+            }
+
             a {
                 color: $text-color-1;
                 text-decoration: none;
-                font-family: 'IBM Plex Mono', monospace;
-                font-size: 14px;
+                font-family: $font-mono;
+                font-size: 0.875rem;
                 font-weight: bold;
                 text-align: center;                
             }
