--- a/style/_mediaquery_footer.scss
+++ b/style/_mediaquery_footer.scss
@@ -2,9 +2,15 @@
     .footer {
         display: flex;
         justify-content: space-between;
+        padding: 2rem 4rem;
         .icons {
             a {
                 margin: 0 1.2rem;
+                i {
+                    &:hover {
+                        color: $btn-color-hover;
+                    }
+                }
             }
         }
     }
