--- a/style/_mediaquery_main.scss
+++ b/style/_mediaquery_main.scss
@@ -32,8 +32,7 @@
 @media screen and (min-width: 769px) {
     .main {
         .section-1 {
-        clip-path: polygon(0 13%, 100% 0, 100% 87%, 0 100%);
-        display: grid;
+        clip-path: polygon(0 13%, 100% 0, 100% 87%, 0 100%);        
         grid-gap: 1.25rem 1.875rem;
         grid-template-columns: auto auto;
         padding: 4.375rem 3.125rem 9.375rem 3.125rem;
@@ -89,7 +88,7 @@
                 align-content: center;
                     
                 .img {
-                    margin-left: 45px;
+                    margin-left: 2.8125rem;
                     display: flex;
                     flex-direction: column;
                     img {
@@ -102,61 +101,15 @@
                     }
                 }                        
             }
-        }
-        
-        .section-5 {
-            background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
-            clip-path: polygon(0 25%, 100% 0, 100% 100%, 0 100%);
-            height: 400px;
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            h3 {
-                //margin-top: 200px;
-                font-size: 38px;
-                font-family: 'IBM Plex Sans', sans-serif;
-                color: $text-color-2;
-            }
-        
-            .btn {
-                height: 48px;
-                width: 300px;
-                margin-top: 2rem;
-                background: $btn-color-normal;
-                display: flex;
-                justify-content: center;
-                align-items: center;            
-                &:hover {
-                    background: $btn-color-hover;
-                    line-height: 24px;
-                    a {
-                        color: $text-color-2;                    
-                    }
-                }
-            
-                a {
-                    color: $text-color-1;
-                    text-decoration: none;
-                    font-family: 'IBM Plex Mono', monospace;
-                    font-size: 14px;
-                    font-weight: bold;
-                    text-align: center;                
-                }
-            }
-        }
+        }        
     }
 }
 
 @media screen and (min-width: 1025px) {
     .main {
-        .section-1 {
-        display: grid;
-        grid-gap: 40px 70px;
-        grid-template-columns: auto auto;
-        //grid-template-rows: 100px 40vh 40vh;
-        padding: 70px 50px 150px 50px;
+        .section-1 {        
+        grid-gap: 2.5rem 4.375rem;        
+        padding: 4.375rem 3.125rem 9.375rem 3.125rem;
         justify-content: space-around;
 
             .h3-section-1 {
