correcion de detalle en pantallas 769px a 1024px

--- a/style/_mediaquery_main.scss
+++ b/style/_mediaquery_main.scss
@@ -88,16 +88,17 @@
                 align-content: center;
                     
                 .img {
-                    margin-left: 2.8125rem;
+                    margin-left: 2rem;
                     display: flex;
-                    flex-direction: column;
+                    flex-direction: column;                    
                     img {
-                        height: 6.25rem;
-                        width: 6.25rem;
-                        margin: 0 2rem;
+                        height: 80px;
+                        width: 80px;                        
+                        margin: 0 32px;
                     }
                     p {
-                        font-size: 1.5rem;                        
+                        font-size: 1rem;
+                        width: 6.875rem;
                     }
                 }                        
             }
@@ -124,6 +125,22 @@
                 overflow: hidden;
                 height: 232px;
                 width: 550px;
+            }
+        }
+
+        .section-4 {            
+            .images-section-4 {                
+                .img {
+                    margin-left: 6rem;                    
+                    img {
+                        height: 90px;
+                        width: 90px;                                                
+                    }
+                    p {
+                        font-size: 1.4rem;
+                        width: 8rem;
+                    }
+                }                        
             }
         }
     }
